--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -73,7 +73,7 @@
                 </div>
 
                 <div id="chessboard-main-container">
-                    <div class="chess-board-area rounded-3" style="background: var(--color-element-background);">
+                    <div class="chess-board-area rounded-3">
                         <div id="timer-black" class="timer-box timer-top-right">0:00</div>
                         <div id="myBoard" style="width: 100%;"></div>
 
