--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -74,10 +74,12 @@
 
                 <div id="chessboard-main-container">
                     <div class="chess-board-area rounded-3">
-                        <div id="timer-black" class="timer-box timer-top-right">0:00</div>
-                        <div id="myBoard" style="width: 100%;"></div>
+                        <div class="board-relative-wrapper position-relative">
+                            <div id="timer-black" class="timer-box timer-top-right">0:00</div>
+                            <div id="myBoard" style="width: 100%;"></div>
 
-                        <div id="timer-white" class="timer-box timer-bottom-right">0:00</div>
+                            <div id="timer-white" class="timer-box timer-bottom-right">0:00</div>
+                        </div>
                         <div id="pgn-history-container" class="mt-3">
                             <div id="pgn-history-list">
                             </div>
