--- a/frontend/static/css/style.css
+++ b/frontend/static/css/style.css
@@ -81,7 +81,7 @@ body {
     width: 100%;
     height: 100%;
     z-index: 1000;
-    background-image: url('../img/background.png');
+    background-image: url('/static/img/background.png');
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
