--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -139,6 +139,8 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <script src="{{ url_for('static', filename='js/chessboard.js') }}"></script>
 <script src="https://cdn.jsdelivr.net/npm/chess.js@0.10.3/chess.min.js"></script>
+<script src="{{ url_for('static', filename='js/constants.js') }}"></script>
+<script src="{{ url_for('static', filename='js/logic_game.js') }}"></script>
 <script src="{{ url_for('static', filename='js/main.js') }}"></script>
 
 {% include 'bot_settings_modal.html' %}
